# humprot

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
_deprecated/: build_human_kmer_tree.py  compact_trie.py  run_build_human_kmer_trees.sh  test_compact_trie.py  test_trees.py
data/: README.md
notebooks/: asparaginase_kmer_exploration.ipynb  human_kmer_exploration.ipynb  mktree_demo.ipynb
scripts/: build_human_kmer_tree.py  build_multikmer_tree.py  remove_seqs_with_characters.py  run_build_asparaginase_multikmer_tree.sh  run_build_human_kmer_trees.sh  run_build_human_multikmer_tree.sh  run_build_human_noXU_multikmer_tree.sh  run_build_human_noX_multikmer_tree.sh
src/humprot/: __main__.py  constants.py  core.py  helpers.py
src/humprot/trees/: __init__.py  multikmer_tree.py  trees.py
tests/: test_compact_trie.py  test_core.py  test_helpers.py  test_multikmer_trie.py
tests/data/_tmp/: saved_simple_tree1.npz
