[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "humprot"
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.md"
description = "Protein humanization."
authors = [
  {name = "Addison Howe"},
]
dependencies = [
  "numpy>=2.2",
  "matplotlib>=3.10",
  "jax",
  "ipykernel",
  "ipywidgets",
  "pytest",
  "tqdm",
  "pandas",
  "biopython",
]

[project.scripts]
humprot = "humprot.__main__:main"
